--- a/templates/index.html
+++ b/templates/index.html
@@ -2,19 +2,16 @@
 <!doctype html>
 <html>
     <head>
-        <title>Dynamic Restaurant Search Map with Code Input</title>
+        <title>iNeedToGoRightNow</title>
         <meta charset="utf-8">
         <!-- Link to the external CSS file -->
         <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     </head>
     <body>
-        <!-- POI Control Buttons -->
-        <div id="poiControls">
-            <button id="myLocation">My Location</button>
+        <div class="container">
+            {% include 'map.html' %}
+            {% include 'sidebar.html' %}
         </div>
-        
-        <!-- Map Container -->
-        <div id="map"></div>
         <!-- Main JavaScript File -->
         <script type="module" src="{{ url_for('static', filename='script.js') }}"></script>
     </body>
