Changed to bathroom finder

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -1,7 +1,7 @@
 <!-- templates/sidebar.html -->
 <div id="sidebar">
     <h2>Closest Bathrooms</h2>
-    <ul id="restaurantList">
-        <!-- Restaurants will be dynamically populated here -->
+    <ul id="bathroomList">
+        <!-- Bathrooms will be dynamically populated here -->
     </ul>
 </div>
