--- a/static/styles.css
+++ b/static/styles.css
@@ -35,12 +35,12 @@ html, body {
     text-align: center;
 }
 
-#restaurantList {
+#bathroomList {
     list-style-type: none;
     padding: 0;
 }
 
-#restaurantList li {
+#bathroomList li {
     background-color: #fff;
     margin-bottom: 10px;
     padding: 15px;
@@ -48,17 +48,17 @@ html, body {
     border-radius: 5px;
 }
 
-#restaurantList li h3 {
+#bathroomList li h3 {
     margin: 0 0 5px 0;
     font-size: 18px;
 }
 
-#restaurantList li p {
+#bathroomList li p {
     margin: 5px 0;
     color: #555;
 }
 
-#restaurantList li .code {
+#bathroomList li .code {
     font-weight: bold;
     color: #4285F4;
 }
