--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,8 @@
           {% endif %}
         {% endwith %}
     </div>
-    {% block content %}{% endblock %}
+    <div class="main-content">
+        {% block content %}{% endblock %}
+    </div>
 </body>
 </html>
