--- a/templates/base.html
+++ b/templates/base.html
@@ -13,8 +13,8 @@
             <a class="nav-brand" href="{{ url_for('index') }}">iNeedToGoRightNow</a>
         </div>
         <div class="nav-right">
-            {% if user %}
-                <span class="nav-user">Hello, {{ user.username }}!</span>
+            {% if 'username' in session %}
+                <span class="nav-user">Hello, {{ session.username }}!</span>
                 <a href="{{ url_for('logout') }}" class="nav-link">Logout</a>
             {% else %}
                 <a href="{{ url_for('login') }}" class="nav-link">Login</a>
