--- a/static/styles.css
+++ b/static/styles.css
@@ -10,7 +10,10 @@
 /* Ensure the html and body take full height */
 html, body {
     height: 100%;
-    font-family: Arial, sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, sans-serif;
+    background-color: rgb(221, 220, 220);
+    background: url("map6.png") no-repeat center center fixed;
+    background-size: cover;
 }
 
 /* Body as a flex container in column direction */
@@ -24,21 +27,33 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #4285F4;
+    background-color: rgba(210, 203, 188, 0.5);
+    box-shadow: 2px 2px 12px rgba(109, 109, 109, 0.7);
     color: #fff;
     padding: 10px 20px;
-    flex-shrink: 0; /* Prevent the navbar from shrinking */
+    flex-shrink: 0; 
+}
+
+.logo {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    width: 100px;     
+    height: auto;      
+    max-width: 100%;      
 }
 
 .nav-brand {
-    color: #fff;
+    color: black;
     text-decoration: none;
     font-weight: bold;
     font-size: 20px;
 }
 
 .nav-right a {
-    color: #fff;
+    color: black;
     margin-left: 15px;
     text-decoration: none;
     font-size: 16px;
@@ -46,6 +61,7 @@ body {
 
 .nav-user {
     margin-right: 15px;
+    color:black;
 }
 
 .nav-right a:hover {
@@ -79,11 +95,10 @@ body {
     color: #004085;
 }
 
-/* Main content should flex to fill the remaining space */
 .main-content {
     flex: 1 1 auto;
     display: flex;
-    height: 0; /* Necessary for Flexbox to calculate correctly */
+    height: 0;
 }
 
 /* Container to hold map and sidebar */
@@ -124,7 +139,14 @@ body {
     margin-bottom: 10px;
     padding: 15px;
     border: 1px solid #ddd;
-    border-radius: 5px;
+    border-radius: 10px;
+    transition: all 0.3s ease;
+    cursor: pointer;
+    position: relative;
+}
+
+#bathroomList li:hover {
+    background-color: #f1f1f1;
 }
 
 #bathroomList li h3 {
@@ -212,11 +234,12 @@ body {
 .form-container {
     max-width: 400px;
     margin: 50px auto;
-    background: #f9f9f9;
+    background: #ffffff;
     padding: 20px;
     border: 1px solid #ddd;
-    border-radius: 5px;
-    flex: 1; /* Allow forms to grow if necessary */
+    border-radius: 10px;
+    flex: 1; 
+    box-shadow: 2px 2px 12px rgba(109, 109, 109, 0.7);
 }
 
 .form-container h2 {
@@ -234,22 +257,23 @@ body {
     padding: 8px;
     box-sizing: border-box;
     border: 1px solid #ccc;
-    border-radius: 3px;
+    border-radius: 10px;
 }
 
 .btn-submit {
     width: 100%;
     padding: 10px;
     border: none;
-    background-color: #4285F4;
+    background-color: black;
     color: #fff;
     font-size: 16px;
     border-radius: 3px;
     cursor: pointer;
+    border-radius: 10px;
 }
 
 .btn-submit:hover {
-    background-color: #357ae8;
+    background-color: rgb(52, 52, 52);
 }
 
 /* Ensure that the container and its children do not exceed available space */
