--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
                 <a href="{{ url_for('logout') }}" class="nav-link">Logout</a>
             {% else %}
                 <a href="{{ url_for('login') }}" class="nav-link">Login</a>
-                <a href="{{ url_for('create_account') }}" class="nav-link">Create Account</a>
+                <a href="{{ url_for('create_account') }}" class="nav-link">Sign Up</a>
             {% endif %}
         </div>
     </nav>
