--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,8 @@
 {% block content %}
 <div class="form-container">
     <h2>Login</h2>
+    <div class="box">
+        <img src="{{ url_for('static', filename='image.png') }}" alt="none" class="logo">
     <form method="POST" action="{{ url_for('login') }}">
         <div class="form-group">
             <label for="username">Username:</label><br>
