--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
         </div>
         <div class="nav-right">
             {% if 'username' in session %}
-                <span class="nav-user">Hello, {{ session.username }}!</span>
+                <span class="nav-user">Hello, {{ session.username }}</span>
                 <a href="{{ url_for('logout') }}" class="nav-link">Logout</a>
             {% else %}
                 <a href="{{ url_for('login') }}" class="nav-link">Login</a>
