--- a/templates/bathroom_side_view.html
+++ b/templates/bathroom_side_view.html
@@ -4,7 +4,7 @@
     <button id="close-side-view" class="close-button">&times;</button>
     <h2 class="sidebar-title">{{ name }}</h2>
     <p><strong>Address:</strong> {{ address }}</p>
-    <p><strong>Rating:</strong> {{ rating }}</p>
+    <p><strong>Rating:</strong> {{ rating }} ⭐</p>
 
     <hr>
 
