Improved top codes

--- a/templates/bathroom_side_view.html
+++ b/templates/bathroom_side_view.html
@@ -12,7 +12,7 @@
 
     <!-- Bathroom Codes Section -->
     <div class="section">
-        <h3>Bathroom Codes</h3>
+        <h3>Possible Bathroom Codes</h3>
         <ul id="codeList">
             {% if codes %}
                 {% for code in codes %}
